<?xml version="1.0"?>
<package format="2">
  <name>sentry_chassis_controller</name>
  <version>0.1.0</version>
  <description>
    A swerve drive controller for sentry robot with 8 independent PID controllers.
  </description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>controller_interface</depend>
  <depend>control_toolbox</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>urdf</depend>
  <depend>angles</depend>
  <depend>realtime_tools</depend>

  <export>
    <controller_interface plugin="${prefix}/plugins.xml"/>
  </export>
</package>
